--- a/HTML/login.html
+++ b/HTML/login.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Estilo opcional removido por ora -->
-     <link href="/CSS/login.css" rel="stylesheet"> 
+     <link href="../CSS/login.css" rel="stylesheet"> 
   </head>
   <body class="login-background d-flex align-items-center py-4 bg-body-tertiary">
     <main class="form-signin w-100 m-auto">
@@ -20,20 +20,28 @@
             <!-- Imagem substituída por uma pública do Bootstrap -->
             <div class="d-flex justify-content-center align-items-center rounded-5">
               <!-- FIXME  (class="rounded-circle") usada para arredondar elementos semelhante a um icone de usuário -->
-              <img class="mb-4" src="/IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70">
+              <img class="mb-4" src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70">
             </div>
             <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Login</h1>
 
             <div class="form-floating">
-              <input type="email" class="form-control form-control-sm" id="floatingInput" placeholder="nome@exemplo.com" required>
+              <input type="email" class="form-control form-control-sm" id="email" placeholder="nome@exemplo.com" required>
               <label class="text-muted" for="floatingInput">Email</label>
             </div>
             <div class="form-floating">
-              <input type="password" class="form-control form-control-sm" id="floatingPassword" placeholder="Senha" required>
+              <input type="password" class="form-control form-control-sm" id="senha" placeholder="Senha" required>
               <label class="text-muted" for="floatingPassword">Digite Sua Senha</label>
+              <span id="senhaDica" class="form-text text-muted d-none">
+                <a >A senha deve conter :</a>  
+                <ul>
+                    <li>Conter 8 a 20 caracteres</li>
+                    <li>Conter letras e números</li>
+                    <li>Caracter especial</li>
+                  </ul> 
+              </span>
             </div>
 
-            <div class="form-check text-start my-3">
+            <div class="form-check  form-switch text-start my-3">
               <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
               <label class="form-check-label text-muted" for="flexCheckDefault">Lembrar usuário</label>
             </div>
@@ -43,6 +51,7 @@
         </div>
       </div>
     </main>
+    <script src="../JS/login.js"></script>
   </body>
 </html>
 
