--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,6 +22,7 @@ TODO
         <a href="#">Área do visitante</a>
       </div>
       <div class="main">
+        <h1>Painel</h1>
 <!-- --------------------------------------------------------------------- -->
       </div>
     </div>
