--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -24,25 +24,45 @@
               <img class="mb-4" src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70">
             </div>
             <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Login</h1>
-
+            
+            <!-- NOME -->
             <div class="form-floating  mb-1">
+              <input type="text" class="form-control form-control-sm bg-form-login" id="nome" placeholder="Seu nome completo" required>
+              <label class="text-muted " for="email">Nome completo</label>
+            </div>
+            <!-- ---- -->
+            
+            <!-- CPF -->
+            <div class="form-floating  mb-1">
+              <input type="" class="form-control form-control-sm bg-form-login" id="cpf" placeholder="Seu nome completo" required>
+              <label class="text-muted " for="email">CPF</label>
+            </div>
+            <!-- --- -->
+
+            <!-- EMAIL -->
+            <div class="form-floating mb-4 mt-3">
               <input type="email" class="form-control form-control-sm bg-form-login" id="email" placeholder="nome@exemplo.com" required>
               <label class="text-muted " for="email">Email</label>
             </div>
-            <div class="form-floating mb-0 mt-3">
+            <!-- ----- -->
+
+            <!-- SENHA -->
+            <div class="form-floating  mb-1">
               <input type="password" class="form-control form-control-sm bg-form-login" id="senha" placeholder="Senha" required>
-              <label class="text-muted" for="senha">Senha</label>
+              <label class="text-muted" for="senha">Digite Sua Senha</label>
+              <div class="form-floating  mb-1">
+              <input type="password" class="form-control form-control-sm bg-form-login" id="senhaverif" placeholder="Senha" required>
+              <label class="text-muted" for="senha">Repita Sua Senha</label>
             </div>
-            <div class="d-flex justify-content-center">  
-              <div class="d-inline-flex gap-3 align-items-center justify-content-center mb-4">
-                <a href="#" class="link-primary text-decoration-none fs-7">recuperar senha</a>
-                <a href="../HTML/cadastro.html" class="link-primary text-decoration-none fs-7">cadastre-se</a>
-              </div>
+            <!-- ----- -->
+
+            <div class="d-flex justify-content-center mb-4">
+                <a href="../HTML/login.html" class="link-primary text-decoration-none fs-7">Já tenho uma conta</a>
             </div>
-              <div>
+            <div>
                 <span id="senhaDica" class="form-text text-muted mt-3 d-none">
                 <a>A senha deve conter :</a>  
-                  <ul class="mb-0">
+                  <ul class="mb-1">
                       <li>Conter 8 a 20 caracteres</li>
                       <li>Conter letras e números</li>
                       <li>Caracter especial</li>
@@ -54,7 +74,7 @@
               <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
               <label class="form-check-label text-muted" for="flexCheckDefault">Lembrar Senha</label>
             </div>
-            <button class="btn btn-custom w-100 py-2" type="submit">ENTRAR</button>
+            <button class="btn btn-custom w-100 py-2" type="submit">CADASTRE-SE</button>
             <p class="mt-5 mb-3 text-body-secondary">&copy;Descubra Muriaé-2025</p>
           </form>
         </div>
@@ -63,4 +83,3 @@
     <script src="../JS/login.js"></script>
   </body>
 </html>
-
