Pagina de login design V0.1.3
.Foi adicionado o Script de validação do formulário de login "valid_form_cadastro.js"

.Pequenas alterações e comentarios foram feitos a fim de otimizar o codigo e auxiliar na documentação do projeto

Co-Authored-By: mattwdot <211071505+mattwdot@users.noreply.github.com>
Co-Authored-By: renzoturettaa <211070002+renzoturettaa@users.noreply.github.com>

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- TROCAR O NOME DAS CLASSES VISANDO AS BOAS PRÁTICAS DE PROGRAMAÇÃO -->
-TODO    
+<!--TODO-->    
 <header>
       <div><strong>Descubra Muriaé</strong></div>
       <div class="search-box">
