--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -23,40 +23,40 @@
               <!-- FIXME  (class="rounded-circle") usada para arredondar elementos semelhante a um icone de usuário -->
               <img class="mb-4" src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70">
             </div>
-            <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Login</h1>
+            <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Cadastro</h1>
             
             <!-- NOME -->
-            <div class="form-floating  mb-1">
+            <div class="form-floating  mb-2">
               <input type="text" class="form-control form-control-sm bg-form-login" id="nome" placeholder="Seu nome completo" required>
               <label class="text-muted " for="email">Nome completo</label>
             </div>
             <!-- ---- -->
             
             <!-- CPF -->
-            <div class="form-floating  mb-1">
+            <div class="form-floating  mb-2">
               <input type="" class="form-control form-control-sm bg-form-login" id="cpf" placeholder="Seu nome completo" required>
               <label class="text-muted " for="email">CPF</label>
             </div>
             <!-- --- -->
 
             <!-- EMAIL -->
-            <div class="form-floating mb-4 mt-3">
+            <div class="form-floating mb-2">
               <input type="email" class="form-control form-control-sm bg-form-login" id="email" placeholder="nome@exemplo.com" required>
               <label class="text-muted " for="email">Email</label>
             </div>
             <!-- ----- -->
 
             <!-- SENHA -->
-            <div class="form-floating  mb-1">
+            <div class="form-floating  mb-2">
               <input type="password" class="form-control form-control-sm bg-form-login" id="senha" placeholder="Senha" required>
               <label class="text-muted" for="senha">Digite Sua Senha</label>
-              <div class="form-floating  mb-1">
+              <div class="form-floating  mb-2">
               <input type="password" class="form-control form-control-sm bg-form-login" id="senhaverif" placeholder="Senha" required>
               <label class="text-muted" for="senha">Repita Sua Senha</label>
             </div>
             <!-- ----- -->
 
-            <div class="d-flex justify-content-center mb-4">
+            <div class="d-flex justify-content-center mb-2">
                 <a href="../HTML/login.html" class="link-primary text-decoration-none fs-7">Já tenho uma conta</a>
             </div>
             <div>
