--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" href="/CSS/index.css">
-    <title>Descubra Muriaé - Painel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Stylesheet" href="/CSS/index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Descubra Muriaé - Painel</title>
 </head>
-<body>
+
 <!-- TROCAR O NOME DAS CLASSES VISANDO AS BOAS PRÁTICAS DE PROGRAMAÇÃO -->
-<!--TODO-->    
+<!--TODO-->
 <header>
-      <div><strong>Descubra Muriaé</strong></div>
-      <div class="search-box">
-        <input type="text" placeholder="Pesquisar">
+  <nav class="container-fluid d-flex justify-content-between align-items-center">
+    <!-- Logo ou título -->
+    <a class="navbar-brand" href="#">MinhaMarca</a>
+
+    <!-- Avatar substituindo o botão do menu -->
+    <a href="#perfil" class="d-inline-block">
+      <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Avatar do Usuário"
+        class="rounded-circle avatar-bubble" width="40" height="40">
+    </a>
+
+    </div>
+  </nav>
+</header>
+
+<body>
+
+  <div class="container-fluid ">
+    <div class="row">
+      <div class="col-sm-3 bg-lightorder-sm-1">
+        <div class="sidebar min-vh-100">
+          <a href="#">Área do visitante</a>
+        </div>
       </div>
-      <div class="logout">Sair</div>
-    </header>
-  
-    <div class="container">
-      <div class="sidebar">
-        <a href="#">Área do visitante</a>
-      </div>
-      <div class="main">
-        <h1>Painel</h1>
-<!-- --------------------------------------------------------------------- -->
+      <div class="col-sm-9 order-sm-1">
+        <div class="main">
+          <h1>Painel</h1>
+        </div>
       </div>
     </div>
-  </body>
+  </div>
+
+</body>
+
 </html>
