--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,19 +12,22 @@
 <!-- TROCAR O NOME DAS CLASSES VISANDO AS BOAS PRÁTICAS DE PROGRAMAÇÃO -->
 <!--TODO-->
 <header>
-  <nav class="container-fluid d-flex justify-content-between align-items-center">
-    <!-- Logo ou título -->
-    <a class="navbar-brand" href="#">MinhaMarca</a>
+  <nav class="container-fluid d-flex justify-content-between align-items-center py-2" style="height: 60px;">
+    
+    <!-- Logo à esquerda, alinhada verticalmente ao centro -->
+    <div class="d-flex align-items-center">
+      <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="40" height="40">
+    </div>
 
-    <!-- Avatar substituindo o botão do menu -->
+    <!-- Avatar à direita, alinhado verticalmente ao centro -->
     <a href="#perfil" class="d-inline-block">
       <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Avatar do Usuário"
         class="rounded-circle avatar-bubble" width="40" height="40">
     </a>
 
-    </div>
   </nav>
 </header>
+
 
 <body>
 
