Patch de correção - V2.0
Altreções no front end da pagina index.html e migração da validação dos campos do fomulário de login e cadastro para PHP visando integração com banco de dados

Co-Authored-By: GuiLC3 <211069091+GuiLC3@users.noreply.github.com>

--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -17,7 +17,7 @@
     <main class="form-signin w-100 m-auto">
       <div class="card shadow rounded-4">
         <div class="card-body p-3">
-          <form>
+          <form method="POST" action="cadastro.php">
             <!-- Imagem substituída por uma pública do Bootstrap -->
             <div class="d-flex justify-content-center align-items-center rounded-5">
               <!-- FIXME  (class="rounded-circle") usada para arredondar elementos semelhante a um icone de usuário -->
