--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,6 +17,7 @@
     <!-- Logo à esquerda, alinhada verticalmente ao centro -->
     <div class="d-flex align-items-center">
       <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="40" height="40">
+      <span class="fs-5">Descubra Muriaé</span>
     </div>
 
     <!-- Avatar à direita, alinhado verticalmente ao centro -->
@@ -31,11 +32,33 @@
 
 <body>
 
-  <div class="container-fluid ">
+  <div class="container-fluid p-0">
     <div class="row">
-      <div class="col-sm-3 bg-lightorder-sm-1">
-        <div class="sidebar min-vh-100">
-          <a href="#">Área do visitante</a>
+      <div class="col-sm-3 bg-lightorder-sm-1 ">
+        <div class="sidebar p-0  min-vh-100 "><!-- Sidebar  --> 
+          <!-- Card para çocalização de conteúdos no painel  -->
+          <!-- ---------------------------------------------- -->  
+          <div class="card mb-1">
+            <div class="card-body ">
+              <h5 class="card-title text-center">Placeholder 1</h5>
+              <a href="#" class="btn text-muted p-0">Acessar</a>
+            </div>
+          </div>
+          <!-- ---------------------------------------------- -->  
+          <div class="card mb-1">
+            <div class="card-body">
+              <h5 class="card-title text-center">Placeholder 2</h5>
+              <a href="#" class="btn text-muted p-0">Acessar</a>
+            </div>
+          </div>
+          <!-- ---------------------------------------------- -->  
+          <div class="card mb-1">
+            <div class="card-body">
+              <h5 class="card-title text-center">Placeholder 3</h5>
+              <a href="#" class="btn text-muted p-0">Acessar</a>
+            </div>
+          </div>
+          <!-- ---------------------------------------------- -->  
         </div>
       </div>
       <div class="col-sm-9 order-sm-1">
