--- a/HTML/login.html
+++ b/HTML/login.html
@@ -17,7 +17,7 @@
     <main class="form-signin w-100 m-auto">
       <div class="card shadow rounded-4">
         <div class="card-body p-3">
-          <form>
+          <form method="POST" action="login.php">
             <!-- Imagem substituída por uma pública do Bootstrap -->
             <div class="d-flex justify-content-center align-items-center rounded-5">
               <!-- FIXME  (class="rounded-circle") usada para arredondar elementos semelhante a um icone de usuário -->
@@ -26,11 +26,11 @@
             <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Login</h1>
 
             <div class="form-floating  mb-1">
-              <input type="email" class="form-control form-control-sm bg-form-login" id="email" placeholder="nome@exemplo.com" required>
+              <input type="email" class="form-control form-control-sm bg-form-login" id="email" name="email" placeholder="nome@exemplo.com" required>
               <label class="text-muted " for="email">Email</label>
             </div>
             <div class="form-floating mb-0 mt-3">
-              <input type="password" class="form-control form-control-sm bg-form-login" id="senha" placeholder="Senha" required>
+              <input type="password" class="form-control form-control-sm bg-form-login" id="senha" name="senha" placeholder="Senha" required>
               <label class="text-muted" for="senha">Senha</label>
             </div>
             <div class="d-flex justify-content-center">  
