--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="Stylesheet" href="/CSS/index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <title>Descubra Muriaé - Painel</title>
 </head>
 
@@ -15,17 +17,41 @@
   <nav class="container-fluid d-flex justify-content-between align-items-center py-2" style="height: 60px;">
     
     <!-- Logo à esquerda, alinhada verticalmente ao centro -->
+    
     <div class="d-flex align-items-center">
       <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="40" height="40">
       <span class="fs-5">Descubra Muriaé</span>
     </div>
+      <div class="dropdown">
+        <img src="https://i.pravatar.cc/150?img=3" 
+            class="rounded-circle dropdown-avatar-toggle" 
+            alt="Avatar" 
+            id="avatarDropdown" 
+            role="button" 
+            data-bs-toggle="dropdown" 
+            aria-expanded="false"
+            style="width: 48px; height: 48px; object-fit: cover; cursor: pointer;">
 
-    <!-- Avatar à direita, alinhado verticalmente ao centro -->
-    <a href="#perfil" class="d-inline-block">
-      <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Avatar do Usuário"
-        class="rounded-circle avatar-bubble" width="40" height="40">
-    </a>
-
+            <ul class="dropdown-menu dropdown-menu-end p-0 mt-2" aria-labelledby="avatarDropdown">
+              <li class="dropdown-header bg-azulPrimario text-white px-3 py-2">
+                <div class="fw-semibold" id="username">Fl1ckerPa</div>
+                <div class="text-white small" id="nome completo">Pedro Augusto Amaro Cunha</div>
+              </li>
+              <li><hr class="dropdown-divider my-1"></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-person-circle me-2"></i>Seu Perfil</a></li>
+              <li><hr class="dropdown-divider my-1"></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-person-vcard"></i> Seu Curriculo</a></li>
+              <li><hr class="dropdown-divider my-1"></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-clock-history"></i> Histórico de candidaturas </a></li>
+              <li><hr class="dropdown-divider my-1"></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-shop"></i> Seu Estabelecimento</a></li>
+              <li><hr class="dropdown-divider my-1"></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-gear me-2"></i> Settings</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </nav>
 </header>
 
@@ -39,26 +65,32 @@
           <!-- Card para çocalização de conteúdos no painel  -->
           <!-- ---------------------------------------------- -->  
           <div class="card mb-1">
-            <div class="card-body ">
-              <h5 class="card-title text-center">Placeholder 1</h5>
+            <div class="card-body sidebar-card">
+              <h5 class="card-title text-center"><i class="bi bi-graph-up-arrow"></i> Minhas Métricas</h5>
               <a href="#" class="btn text-muted p-0">Acessar</a>
             </div>
           </div>
           <!-- ---------------------------------------------- -->  
           <div class="card mb-1">
-            <div class="card-body">
-              <h5 class="card-title text-center">Placeholder 2</h5>
+            <div class="card-body sidebar-card">
+              <h5 class="card-title text-center"><i class="bi bi-funnel"></i> Filtro de vagas</h5>
               <a href="#" class="btn text-muted p-0">Acessar</a>
             </div>
           </div>
           <!-- ---------------------------------------------- -->  
           <div class="card mb-1">
-            <div class="card-body">
-              <h5 class="card-title text-center">Placeholder 3</h5>
+            <div class="card-body sidebar-card">
+              <h5 class="card-title text-center"><i class="bi bi-calendar-event"></i> Calendário</h5>
               <a href="#" class="btn text-muted p-0">Acessar</a>
             </div>
           </div>
           <!-- ---------------------------------------------- -->  
+          <div class="card mb-1">
+            <div class="card-body sidebar-card">
+              <h5 class="card-title text-center"> Adicionar atalho</h5>
+              <a href="#" class="btn p-0"><i class="bi bi-plus-circle"></i></a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-sm-9 order-sm-1">
@@ -69,6 +101,7 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
