--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -1,85 +1,120 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página de login do painel do usuário - Descubra Muriaé">
-    <meta name="robots" content="noindex, nofollow">
-    <title>Descubra Muriaé - Login</title>
 
-    <!-- Estilo do Bootstrap via CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Página de login do painel do usuário - Descubra Muriaé">
+  <meta name="robots" content="noindex, nofollow">
+  <title>Descubra Muriaé - Login</title>
 
-    <!-- Estilo opcional removido por ora -->
-     <link href="../CSS/login.css" rel="stylesheet"> 
-  </head>
-  <body class="login-background d-flex align-items-center py-4 bg-body-tertiary">
-    <main class="form-signin w-100 m-auto">
-      <div class="card shadow rounded-4">
-        <div class="card-body p-3">
-          <form method="POST" action="cadastro.php">
-            <!-- Imagem substituída por uma pública do Bootstrap -->
-            <div class="d-flex justify-content-center align-items-center rounded-5">
-              <!-- FIXME  (class="rounded-circle") usada para arredondar elementos semelhante a um icone de usuário -->
-              <img class="mb-4" src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70">
-            </div>
-            <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Cadastro</h1>
-            
-            <!-- NOME -->
+  <!-- Estilo do Bootstrap via CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-..." crossorigin="anonymous">
+
+  <link href="../CSS/login.css" rel="stylesheet">
+</head>
+
+<body class="login-background d-flex align-items-center py-4 bg-body-tertiary">
+  <main class="form-signin w-100 m-auto">
+    <div class="card shadow rounded-4">
+      <div class="card-body p-3">
+        <form method="POST" action="cadastro.php">
+          <!-- Imagem substituída por uma pública do Bootstrap -->
+          <div class="d-flex justify-content-center align-items-center rounded-5">
+            <!-- FIXME  (class="rounded-circle") usada para arredondar elementos semelhante a um icone de usuário -->
+            <img class="mb-4" src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70">
+          </div>
+          <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Cadastro</h1>
+
+          <!-- NOME -->
+          <div class="form-floating  mb-2">
+            <input type="text" class="form-control form-control-sm bg-form-login" id="nome"
+              placeholder="Seu nome completo" required>
+            <label class="text-muted " for="email">Nome completo</label>
+          </div>
+          <!-- ---- -->
+
+          <!-- CPF -->
+          <div class="form-floating  mb-2">
+            <input type="" class="form-control form-control-sm bg-form-login" id="cpf" placeholder="Seu nome completo"
+              required>
+            <label class="text-muted " for="email">CPF</label>
+          </div>
+          <!-- --- -->
+
+          <!-- EMAIL -->
+          <div class="form-floating mb-2">
+            <input type="email" class="form-control form-control-sm bg-form-login" id="email"
+              placeholder="nome@exemplo.com" required>
+            <label class="text-muted " for="email">Email</label>
+          </div>
+          <!-- ----- -->
+
+          <!-- SENHA -->
+          <div class="form-floating  mb-2">
+            <input type="password" class="form-control form-control-sm bg-form-login" id="senha" placeholder="Senha"
+              required>
+            <label class="text-muted" for="senha">Digite Sua Senha</label>
             <div class="form-floating  mb-2">
-              <input type="text" class="form-control form-control-sm bg-form-login" id="nome" placeholder="Seu nome completo" required>
-              <label class="text-muted " for="email">Nome completo</label>
-            </div>
-            <!-- ---- -->
-            
-            <!-- CPF -->
-            <div class="form-floating  mb-2">
-              <input type="" class="form-control form-control-sm bg-form-login" id="cpf" placeholder="Seu nome completo" required>
-              <label class="text-muted " for="email">CPF</label>
-            </div>
-            <!-- --- -->
-
-            <!-- EMAIL -->
-            <div class="form-floating mb-2">
-              <input type="email" class="form-control form-control-sm bg-form-login" id="email" placeholder="nome@exemplo.com" required>
-              <label class="text-muted " for="email">Email</label>
-            </div>
-            <!-- ----- -->
-
-            <!-- SENHA -->
-            <div class="form-floating  mb-2">
-              <input type="password" class="form-control form-control-sm bg-form-login" id="senha" placeholder="Senha" required>
-              <label class="text-muted" for="senha">Digite Sua Senha</label>
-              <div class="form-floating  mb-2">
-              <input type="password" class="form-control form-control-sm bg-form-login" id="senhaverif" placeholder="Senha" required>
+              <input type="password" class="form-control form-control-sm bg-form-login" id="senhaverif"
+                placeholder="Senha" required>
               <label class="text-muted" for="senha">Repita Sua Senha</label>
             </div>
             <!-- ----- -->
 
             <div class="d-flex justify-content-center mb-2">
-                <a href="../HTML/login.html" class="link-primary text-decoration-none fs-7">Já tenho uma conta</a>
+              <a href="../HTML/login.html" class="link-primary text-decoration-none fs-7">Já tenho uma conta</a>
             </div>
             <div>
-                <span id="senhaDica" class="form-text text-muted mt-3 d-none">
-                <a>A senha deve conter :</a>  
-                  <ul class="mb-1">
-                      <li>Conter 8 a 20 caracteres</li>
-                      <li>Conter letras e números</li>
-                      <li>Caracter especial</li>
-                    </ul> 
-                </span>
+              <span id="senhaDica" class="form-text text-muted mt-3 d-none">
+                <a>A senha deve conter :</a>
+                <ul class="mb-1">
+                  <li>Conter 8 a 20 caracteres</li>
+                  <li>Conter letras e números</li>
+                  <li>Caracter especial</li>
+                </ul>
+              </span>
             </div>
 
             <div class="form-check  form-switch text-start mt-3 mb-4">
               <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
               <label class="form-check-label text-muted" for="flexCheckDefault">Lembrar Senha</label>
             </div>
-            <button class="btn btn-custom w-100 py-2" type="submit">CADASTRE-SE</button>
+            <!-- Botão para abrir o modal -->
+            <button type="button" class="btn btn-custom w-100 py-2" data-bs-toggle="modal"
+              data-bs-target="#staticBackdrop1">
+              CADASTRE-SE
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop1" tabindex="-1" aria-labelledby="exampleModalLabel1"
+              aria-hidden="true">
+              <div class="modal-dialog d-flex justify-content-center">
+                <div class="modal-content w-75">
+                  <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="d-flex modal-body p-4 text-center">
+                    <div class="p-2 flex-fill gap-2">
+                      <button class="btn btn-custom w-100 py-2 m-2">Pessoa Física</button>
+                    </div>
+                    <div class="p-2 flex-fill gap-2">
+                      <button class="btn btn-custom w-100 py-2 m-2">Pessoa Jurídica</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <p class="mt-5 mb-3 text-body-secondary">&copy;Descubra Muriaé-2025</p>
-          </form>
-        </div>
+        </form>
       </div>
-    </main>
-    <script src="../JS/login.js"></script>
-  </body>
+    </div>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-..." crossorigin="anonymous"></script>
+  <script src="../JS/login.js"></script>
+</body>
+
 </html>
