--- a/HTML/login.html
+++ b/HTML/login.html
@@ -26,11 +26,11 @@
             <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Login</h1>
 
             <div class="form-floating  mb-1">
-              <input type="email" class="form-control form-control-sm bg-form-login" id="email" name="email" placeholder="nome@exemplo.com" required>
+              <input type="email" class="form-control form-control-sm bg-form-login" id="email" name="email" placeholder="nome@exemplo.com" autocomplete="off" required>
               <label class="text-muted " for="email">Email</label>
             </div>
             <div class="form-floating mb-0 mt-3">
-              <input type="password" class="form-control form-control-sm bg-form-login" id="senha" name="senha" placeholder="Senha" required>
+              <input type="password" class="form-control form-control-sm bg-form-login" id="senha" name="senha" placeholder="Senha" autocomplete="off" required>
               <label class="text-muted" for="senha">Senha</label>
             </div>
             <div class="d-flex justify-content-center">  
@@ -39,14 +39,14 @@
                 <a href="../HTML/cadastro.html" class="link-primary text-decoration-none fs-7">cadastre-se</a>
               </div>
             </div>
-              <div>
+            <div class="form-text text-muted mb-3 d-none" id="senhaDica">
                 <span id="senhaDica" class="form-text text-muted mt-3 d-none">
-                <a>A senha deve conter :</a>  
+                  <a>A senha deve conter :</a>  
                   <ul class="mb-0">
-                      <li>Conter 8 a 20 caracteres</li>
-                      <li>Conter letras e números</li>
-                      <li>Caracter especial</li>
-                    </ul> 
+                    <li>Conter 8 a 20 caracteres</li>
+                    <li>Conter letras e números</li>
+                    <li>Caracter especial</li>
+                  </ul> 
                 </span>
             </div>
 
@@ -60,7 +60,7 @@
         </div>
       </div>
     </main>
-    <script src="../JS/login.js"></script>
+    <script src="../JS/login_cadastro.js"></script>
   </body>
 </html>
 
