--- a/HTML/login.html
+++ b/HTML/login.html
@@ -1,66 +1,107 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página de login do painel do usuário - Descubra Muriaé">
-    <meta name="robots" content="noindex, nofollow">
-    <title>Descubra Muriaé - Login</title>
 
-    <!-- Estilo do Bootstrap via CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Página de login do painel do usuário - Descubra Muriaé">
+  <meta name="robots" content="noindex, nofollow">
+  <title>Descubra Muriaé - Login</title>
 
-    <!-- Estilo opcional removido por ora -->
-     <link href="../CSS/login.css" rel="stylesheet"> 
-  </head>
-  <body class="login-background d-flex align-items-center py-4 bg-body-tertiary">
-    <main class="form-signin w-100 m-auto">
-      <div class="card shadow rounded-4">
-        <div class="card-body p-3">
-          <form method="POST" action="login.php">
-            <!-- Imagem substituída por uma pública do Bootstrap -->
-            <div class="d-flex justify-content-center align-items-center rounded-5">
-              <!-- FIXME  (class="rounded-circle") usada para arredondar elementos semelhante a um icone de usuário -->
-              <img class="mb-4" src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70">
-            </div>
-            <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Login</h1>
+  <!-- Estilo do Bootstrap via CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-..." crossorigin="anonymous">
 
-            <div class="form-floating  mb-1">
-              <input type="email" class="form-control form-control-sm bg-form-login" id="email" name="email" placeholder="nome@exemplo.com" autocomplete="off" required>
-              <label class="text-muted " for="email">Email</label>
-            </div>
-            <div class="form-floating mb-0 mt-3">
-              <input type="password" class="form-control form-control-sm bg-form-login" id="senha" name="senha" placeholder="Senha" autocomplete="off" required>
-              <label class="text-muted" for="senha">Senha</label>
-            </div>
-            <div class="d-flex justify-content-center">  
-              <div class="d-inline-flex gap-3 align-items-center justify-content-center mb-4">
-                <a href="#" class="link-primary text-decoration-none fs-7">recuperar senha</a>
-                <a href="../HTML/cadastro.html" class="link-primary text-decoration-none fs-7">cadastre-se</a>
-              </div>
-            </div>
-            <div class="form-text text-muted mb-3 d-none" id="senhaDica">
-                <span id="senhaDica" class="form-text text-muted mt-3 d-none">
-                  <a>A senha deve conter :</a>  
-                  <ul class="mb-0">
-                    <li>Conter 8 a 20 caracteres</li>
-                    <li>Conter letras e números</li>
-                    <li>Caracter especial</li>
-                  </ul> 
-                </span>
-            </div>
 
-            <div class="form-check  form-switch text-start mt-3 mb-4">
-              <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-              <label class="form-check-label text-muted" for="flexCheckDefault">Lembrar Senha</label>
-            </div>
-            <button class="btn btn-custom w-100 py-2" type="submit">ENTRAR</button>
-            <p class="mt-5 mb-3 text-body-secondary">&copy;Descubra Muriaé-2025</p>
-          </form>
+  <link href="../CSS/login.css" rel="stylesheet">
+</head>
+
+<body class="login-background d-flex align-items-center py-4 bg-body-tertiary">
+  <!-- FORMULÁRIO INICIALMENTE ESCONDIDO -->
+  <form method="POST" action="cadastro.php" id="formCadastro" class="form-container shadow rounded-4 bg-white d-none">
+    <input type="hidden" name="tipoCadastro" id="tipoCadastro" />
+    <div class="text-center">
+      <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70" class="mb-4" />
+    </div>
+    <h1 class="d-flex justify-content-center align-items-center h3 mb-3 fw-normal">Login</h1>
+
+
+    <!-- CPF DO USUÁRIO -->
+    <div class="form-floating mb-2" id="campoCPF">
+      <input type="text" class="form-control form-control-sm bg-form-login" id="cpf" name="cpf" placeholder="Seu CPF"
+        autocomplete="off" />
+      <label for="cpf">CPF</label>
+    </div>
+
+    <!-- CNPJ DO USUÁRIO -->
+    <div class="form-floating mb-2 d-none" id="campoCNPJ">
+      <input type="text" class="form-control form-control-sm bg-form-login" id="cnpj" name="cnpj" placeholder="Seu CNPJ"
+        autocomplete="off" />
+      <label for="cnpj">CNPJ</label>
+    </div>
+    <!-- --------------- -->
+
+    <!-- SENHA DO USUÁRIO -->
+    <div class="form-floating mb-2">
+      <input type="password" class="form-control form-control-sm bg-form-login" id="senha" name="senha"
+        placeholder="Senha" autocomplete="off" required />
+      <label for="senha">Digite sua senha</label>
+    </div>
+    <!-- ----------------- -->
+
+    <div class="d-flex gap-3 align-items-center justify-content-center mb-4">
+      <a href="#" class="link-primary text-decoration-none fs-7">Recuperar senha</a>
+      <a href="../HTML/cadastro.html" class="link-primary text-decoration-none fs-7">Cadastre-se</a>
+    </div>
+    </div>
+    <div class="form-text text-muted mb-3 d-none" id="senhaDica">
+      <span id="senhaDica" class="form-text text-muted mt-3 d-none">
+        <a>A senha deve conter :</a>
+        <ul class="mb-0">
+          <li>Conter 8 a 20 caracteres</li>
+          <li>Conter letras e números</li>
+          <li>Caracter especial</li>
+        </ul>
+      </span>
+    </div>
+
+    <div class="form-check  form-switch text-start mt-3 mb-4">
+      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+      <label class="form-check-label text-muted" for="flexCheckDefault">Lembrar Senha</label>
+    </div>
+    <button class="btn btn-custom w-100 py-2" type="submit">ENTRAR</button>
+    <p class="mt-5 mb-3 text-body-secondary">&copy;Descubra Muriaé-2025</p>
+
+
+
+  </form>
+
+  <!-- MODAL -->
+  <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content p-4">
+        <div class="d-flex align-items-center justify-content-center  modal-header border-0">
+          <h5 class="modal-title" id="modalLabel">Escolha o tipo de cadastro</h5>
+        </div>
+        <div class="modal-body d-flex justify-content-around">
+          <button id="btnPF" type="button" class="btn btn-custom">Pessoa Física</button>
+          <button id="btnPJ" type="button" class="btn btn-custom">Pessoa Jurídica</button>
         </div>
       </div>
-    </main>
-    <script src="../JS/login_cadastro.js"></script>
-  </body>
-</html>
+    </div>
+  </div>
+  <!-- FIM DO MODAL -->
+  <!-- Incluindo Jquerry na página -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 
+  <!-- Incluindo o Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."
+    crossorigin="anonymous"></script>
+
+  <!-- Incluindo o script custon para as paginas de login e cadastro -->
+  <script src="../JS/login_cadastro.js"></script>
+</body>
+
+</html>
