inicio da correção de funcionalidades

--- a/HTML/inicio_pessoa_fisica.html
+++ b/HTML/inicio_pessoa_fisica.html
@@ -19,9 +19,15 @@
     <!-- Logo à esquerda, alinhada verticalmente ao centro -->
 
     <div class="d-flex align-items-center">
+      <button id="menuToggle" class="btn btn-outline-light">
+        <i class="bi bi-list"></i>
+      </button>
+
       <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="40" height="40">
       <span class="fs-5">Descubra Muriaé</span>
     </div>
+
+    <!-- Drop -->
     <div class="dropdown">
       <img src="https://i.pravatar.cc/150?img=3" class="rounded-circle dropdown-avatar-toggle" alt="Avatar"
         id="avatarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
