Adicionar popover para requisitos de senha no login
Substitui a dica de senha por um popover Bootstrap no formulário de login para exibir os requisitos de senha. Atualiza links de botões em 'inicio_pessoa_fisica.html' para usar tags âncora e melhora ícones de rodapé. Inicializa a funcionalidade popover em 'login_cadastro.js' e comenta a antiga lógica de dica de senha.

--- a/HTML/inicio_pessoa_fisica.html
+++ b/HTML/inicio_pessoa_fisica.html
@@ -32,8 +32,9 @@
         </ul>
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search"> <input type="search"
             class="form-control form-control-dark text-bg-light" placeholder="Pesquisar..." aria-label="Search"> </form>
-        <div class="text-end"> <button type="button" class="btn btn-outline-light me-2">Entrar</button>
-          <button type="button" class="btn btn-warning">Criar conta</button>
+        <div class="text-end">
+          <a class="btn btn-outline-light me-2" href="/HTML/login.html">Entrar</a>
+          <a class="btn btn-warning" href="/HTML/cadastro.html">Criar conta</a>
         </div>
       </div>
     </div>
@@ -306,16 +307,15 @@
       <div class="col-md-4 d-flex align-items-center"> <a href="inicio_pessoa_fisica.html"
           class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none"> <img
             src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="40" height="40" class=" g-3" /> </a>
-        <span class="mb-3 mb-md-0 text-body-secondary ">&copy; 2025 Company, Inc</span> </div>
+        <span class="mb-3 ms-5 mb-md-0 text-body-secondary ">&copy; 2025 Company, Inc</span>
+      </div>
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-emphasis" href="#" aria-label="Instagram"><svg class="bi" width="24"
-              height="24" aria-hidden="true">
-              <use xlink:href="#instagram"></use>
-            </svg></a></li>
-        <li class="ms-3"><a class="text-body-emphasis" href="#" aria-label="Facebook"><svg class="bi" width="24"
-              height="24">
-              <use xlink:href="#facebook"></use>
-            </svg></a></li>
+        <li class="ms-3"><a class="text-body-emphasis" href="#" aria-label="instagram"></a><i
+            class="bi bi-instagram"></i></li>
+        <li class="ms-3"><a class="text-body-emphasis" href="#" aria-label="whatsapp"><i class="bi bi-whatsapp"></i></a>
+        </li>
+        <li class="ms-3"><a class="text-body-emphasis" href="#" aria-label="Facebook"><i class="bi bi-envelope"></i></a>
+        </li>
       </ul>
     </footer>
   </div> <!--Fim Rodapé Desktop -->
