--- a/HTML/dashboard.html
+++ b/HTML/dashboard.html
@@ -6,7 +6,7 @@
   <title>Dashboard de Vagas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="/CSS/dashboard.css" rel="stylesheet">
+  <link href="../CSS/dashboard.css" rel="stylesheet">
 </head>
 <body>
   <nav class="d-none d-md-block p-3" id="topbar">
@@ -300,6 +300,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <script src="/JS/dashboard.js"></script>
+  <script type="module" src="../JS/dashboard.js"></script>
 </body>
 </html>
