--- a/HTML/inicio_pessoa_fisica.html
+++ b/HTML/inicio_pessoa_fisica.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="Stylesheet" href="/CSS/inicio_pagina_pessoa_fisica.css">
+  <link rel="Stylesheet" href="../CSS/inicio_pagina_pessoa_fisica.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
@@ -33,8 +33,8 @@
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search"> <input type="search"
             class="form-control form-control-dark text-bg-light" placeholder="Pesquisar..." aria-label="Search"> </form>
         <div class="text-end">
-          <a class="btn btn-outline-light me-2" href="/HTML/login.html">Entrar</a>
-          <a class="btn btn-warning" href="/HTML/cadastro.html">Criar conta</a>
+          <a class="btn btn-outline-light me-2" href="../HTML/login.html">Entrar</a>
+          <a class="btn btn-warning" href="../HTML/cadastro.html">Criar conta</a>
         </div>
       </div>
     </div>
@@ -319,7 +319,7 @@
       </ul>
     </footer>
   </div> <!--Fim Rodapé Desktop -->
-  <script src="/JS/loginPessoaFisica.js"> </script>
+  <script src="../JS/loginPessoaFisica.js"> </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
