--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Página de login do painel do usuário - Descubra Muriaé" />
     <meta name="robots" content="noindex, nofollow" />
-    <title>Descubra Muriaé - Login</title>
+    <title>Descubra Muriaé - Cadastro</title>
 
     <!-- Estilo do Bootstrap via CDN -->
     <link
