--- a/HTML/login.html
+++ b/HTML/login.html
@@ -11,7 +11,9 @@
   <!-- Estilo do Bootstrap via CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-..." crossorigin="anonymous">
-
+  
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
   <link href="../CSS/login.css" rel="stylesheet">
 </head>
@@ -20,6 +22,7 @@
   <!-- FORMULÁRIO INICIALMENTE ESCONDIDO -->
   <form method="POST" action="../PHP/login.php" id="formCadastro" class="form-container shadow rounded-4 bg-white d-none">
     <input type="hidden" name="tipoCadastro" id="tipoCadastro" />
+    <input type="hidden" name="redirect" id="redirect" />
     <div class="text-center">
       <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="70" height="70" class="mb-4" />
     </div>
@@ -54,8 +57,8 @@
     <!-- ----------------- -->
 
     <div class="d-flex gap-3 align-items-center justify-content-center mb-4">
-      <a href="#" class="link-primary text-decoration-none fs-7">Recuperar senha</a>
-      <a href="../HTML/cadastro.html" class="link-primary text-decoration-none fs-7">Cadastre-se</a>
+      <a href="#" class="link-primary text-decoration-none fs-7" data-bs-toggle="modal" data-bs-target="#modalRecuperarSenha">Recuperar senha</a>
+      <a href="cadastro.html" class="link-primary text-decoration-none fs-7">Cadastre-se</a>
     </div>
     </div>
     
@@ -102,6 +105,83 @@
     </div>
   </div>
   <!-- FIM DO MODAL -->
+
+  <!-- MODAL DE RECUPERAÇÃO DE SENHA -->
+  <div class="modal fade" id="modalRecuperarSenha" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="modalRecuperarSenhaLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header bg-primary text-white">
+          <h5 class="modal-title" id="modalRecuperarSenhaLabel">
+            <i class="bi bi-key"></i> Recuperar Senha
+          </h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form method="POST" action="../PHP/recuperar_senha.php" id="formRecuperarSenha">
+          <input type="hidden" name="tipoCadastro" id="tipoCadastroRecuperar" value="">
+          <div class="modal-body">
+            <p class="text-muted mb-3">Informe seu email e CPF/CNPJ para receber um link de recuperação de senha</p>
+            
+            <!-- Email -->
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="emailRecuperar" name="email" 
+                     placeholder="seu@email.com" autocomplete="off" required />
+              <label for="emailRecuperar">Email cadastrado</label>
+            </div>
+
+            <!-- CPF DO USUÁRIO -->
+            <div class="form-floating mb-3 d-none" id="campoCPFRecuperar">
+              <input type="text" class="form-control" id="cpfRecuperar" name="cpf" 
+                     placeholder="Seu CPF" autocomplete="off" />
+              <label for="cpfRecuperar">CPF (Pessoa Física)</label>
+            </div>
+
+            <!-- CNPJ DO USUÁRIO -->
+            <div class="form-floating mb-3 d-none" id="campoCNPJRecuperar">
+              <input type="text" class="form-control" id="cnpjRecuperar" name="cnpj" 
+                     placeholder="Seu CNPJ" autocomplete="off" />
+              <label for="cnpjRecuperar">CNPJ (Pessoa Jurídica)</label>
+            </div>
+
+            <!-- Mensagens de feedback -->
+            <div id="mensagemRecuperar" class="alert d-none" role="alert"></div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            <button type="submit" class="btn btn-primary" id="btnEnviarRecuperar">
+              <i class="bi bi-envelope"></i> Enviar Email
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- MODAL SELETOR DE TIPO PARA RECUPERAÇÃO -->
+  <div class="modal fade" id="modalTipoRecuperar" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="modalTipoRecuperarLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-sm">
+      <div class="modal-content">
+        <div class="modal-header bg-primary text-white">
+          <h5 class="modal-title" id="modalTipoRecuperarLabel">Tipo de Usuário</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center">
+          <p class="mb-3">Selecione o tipo de usuário:</p>
+          <div class="d-grid gap-2">
+            <button type="button" class="btn btn-outline-primary" id="btnPFRecuperar">
+              <i class="bi bi-person"></i> Pessoa Física
+            </button>
+            <button type="button" class="btn btn-outline-primary" id="btnPJRecuperar">
+              <i class="bi bi-building"></i> Pessoa Jurídica
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- FIM DO MODAL DE RECUPERAÇÃO -->
+
   <!-- IMask para máscaras de entrada -->
   <script src="https://unpkg.com/imask"></script>
 
