--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -10,16 +10,33 @@
 </head>
 <body>
   <div class="main-content-wrapper">
-    <!-- Navbar -->
+    <!-- Navbar Desktop -->
     <nav class="d-none d-md-block p-3 bg-azulPrimario">
       <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-          <a href="inicio_pessoa_fisica.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <a href="index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
             <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="40" height="40" class="g-3" />
           </a>
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="inicio_pessoa_fisica.html" class="nav-link px-2 text-white">Home</a></li>
+            <li><a href="buscar_vagas.html" class="nav-link px-2 text-white">Buscar Vagas</a></li>
+            <li><a href="perfil.html" class="nav-link px-2 text-white">Meu Perfil</a></li>
+            <li><a href="candidaturas.html" class="nav-link px-2 text-white">Candidaturas</a></li>
+            <li><a href="#" class="nav-link px-2 text-white">Notificações</a></li>
+            <li><a href="configuracoes.html" class="nav-link px-2 text-white">Configurações</a></li>
           </ul>
+          <div class="text-end">
+            <div class="dropdown">
+              <button class="btn btn-outline-light dropdown-toggle" type="button" id="userMenuDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="bi bi-person-circle"></i> <span id="userMenu">Usuário</span>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenuDropdown">
+                <li><a class="dropdown-item" href="perfil.html"><i class="bi bi-person"></i> Meu Perfil</a></li>
+                <li><a class="dropdown-item" href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#" id="logoutBtn"><i class="bi bi-box-arrow-right"></i> Sair</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
@@ -27,7 +44,7 @@
     <!-- Navbar Mobile -->
     <nav class="d-block d-md-none navbar navbar-dark bg-azulPrimario fixed-top">
       <div class="container-fluid">
-        <a href="inicio_pessoa_fisica.html" class="d-flex align-items-center text-white text-decoration-none">
+        <a href="index.html" class="d-flex align-items-center text-white text-decoration-none">
           <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="40" height="40" class="g-3" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar">
@@ -39,8 +56,15 @@
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
           </div>
           <div class="offcanvas-body">
-            <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="inicio_pessoa_fisica.html">Home</a></li>
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="buscar_vagas.html"><i class="bi bi-search"></i> Buscar Vagas</a></li>
+              <li class="nav-item"><a class="nav-link" href="perfil.html"><i class="bi bi-person"></i> Meu Perfil</a></li>
+              <li class="nav-item"><a class="nav-link" href="candidaturas.html"><i class="bi bi-check-circle"></i> Candidaturas</a></li>
+              <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-bell"></i> Notificações</a></li>
+              <li class="nav-item"><a class="nav-link" href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
+              <li class="nav-item mt-3"><hr class="text-white"></li>
+              <li class="nav-item"><a class="nav-link text-danger" href="#" id="logoutBtnMobile"><i class="bi bi-box-arrow-right"></i> Sair</a></li>
             </ul>
           </div>
         </div>
@@ -115,7 +139,7 @@
     <footer class="site-footer bg-azulPrimario text-light">
       <div class="container d-flex flex-wrap justify-content-between align-items-center">
         <div class="col-md-6 d-flex align-items-center">
-          <a href="inicio_pessoa_fisica.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <a href="index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
             <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="40" height="40" class="g-3" />
           </a>
           <span class="ms-3 opacity-75">&copy; 2025 Descubra Muriaé</span>
@@ -129,10 +153,13 @@
     </footer>
   </div>
 
-  <!-- Incluir modais de currículo e empresa do inicio_pessoa_fisica.html se necessário -->
-  <!-- Por enquanto, redireciona para inicio_pessoa_fisica.html para usar os modais lá -->
+  <!-- Incluir modais de currículo e empresa do index.html se necessário -->
+  <!-- Por enquanto, redireciona para index.html para usar os modais lá -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../JS/auth.js"></script>
+  <script src="../JS/protect-page.js"></script>
+  <script src="../JS/restricted-nav.js"></script>
   <script src="../JS/perfil.js"></script>
 </body>
 </html>
